--- a/ansible/lab5/aws_ec2.yml
+++ b/ansible/lab5/aws_ec2.yml
@@ -1,13 +1,11 @@
 ---
 plugin: amazon.aws.aws_ec2
 regions:
-  - us-east-1  # Add your target AWS region
+  - us-east-1
 filters:
-  "tag:Name": iVolve # Filter EC2 instances based on tags
+  "tag:Name": iVolve
+  instance-state-name: running  
 keyed_groups:
   - key: tags.Name
-    prefix: tag
+    prefix: tag   
 
-      #hostvars:
-      #ansible_user: ubuntu
-      #ansible_ssh_private_key_file: ./marzouk-key.pem      
